--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,5 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+
+# Kotlin daemon fix
+kotlin.daemon.jvmargs=-Xmx2048M -XX:-UseParallelGC
