--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
-
-# Kotlin daemon fix
-kotlin.daemon.jvmargs=-Xmx2048M -XX:-UseParallelGC
+android.enableJetifier=true
+kotlin.incremental=false
+kotlin.incremental.useClasspathSnapshot=false
+org.gradle.caching=false
